--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ Primeiro.html
 Listas.html
 link-img.html
 seo-titulos.html
+Primeiro-estilo.html
+Primeiro-latout.html
+Primeiro-layout.html
 .gitignore
 ./pages
 ./img
