--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ seo-titulos.html
 Primeiro-estilo.html
 Primeiro-latout.html
 Primeiro-layout.html
-.gitignore
+.git
 ./pages
 ./img
+Estrutura-html5.html
