--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,18 @@
-README.md
-Primeiro.html
-Listas.html
+./img
+.gitignore
+../pages
+git
 link-img.html
+makefile
+reset.html
+resset.css
 seo-titulos.html
+Tipografia.html
+Estrutura-html5.html
+Formularios.html
+Listas.html
+Primeiro.html
 Primeiro-estilo.html
 Primeiro-latout.html
 Primeiro-layout.html
-.git
-./pages
-./img
-Estrutura-html5.html
-Formularios.html
+README.md
